add if/else statement

--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
       <header class="header">
         <div class="container">
-          <div class="header__wrapper"><a class="header__logo-link" href="#"><span class="visually-hidden">Логотип сайта "По полочкам"</span><svg class="header__logo" width="230" height="35" viewBox="0 0 230 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <div class="header__wrapper"><a class="header__logo-link" href="index.html"><span class="visually-hidden">Логотип сайта "По полочкам"</span><svg class="header__logo" width="230" height="35" viewBox="0 0 230 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                 d="M0 0.612722H21.2467V3.21678H17.9631V14.5521H21.2467V17.1945H12.6321V14.5521H14.6409V3.21678H6.6058V14.5521H8.61458V17.1945H0V14.5521H3.28358V3.21678H0V0.612722Z"
                 fill="#37393E"
@@ -100,8 +100,8 @@
           <div class="container">
             <div class="nav__content">
               <ul class="nav__list">
-                <li class="nav__item"><a class="nav__link">Главная</a></li>
-                <li class="nav__item"><a class="nav__link" href="catalog.html">Каталог книг</a></li>
+                <li class="nav__item"><a class="nav__link" href="index.html">Главная</a></li>
+                <li class="nav__item"><a class="nav__link nav__link--active">Каталог книг</a></li>
                 <li class="nav__item"><a class="nav__link" href="#">Оплата и доставка</a></li>
                 <li class="nav__item"><a class="nav__link" href="#">Контакты</a></li>
               </ul>
@@ -389,7 +389,7 @@
       <footer class="footer">
         <div class="container">
           <div class="footer__wrapper">
-            <div class="footer__col"><a class="footer__logo-link" href="#"><span class="visually-hidden">Логотип сайта "По полочкам"</span><svg class="footer__logo" width="230" height="35" viewBox="0 0 230 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <div class="footer__col"><a class="footer__logo-link" href="index.html"><span class="visually-hidden">Логотип сайта "По полочкам"</span><svg class="footer__logo" width="230" height="35" viewBox="0 0 230 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M0 0.612722H21.2467V3.21678H17.9631V14.5521H21.2467V17.1945H12.6321V14.5521H14.6409V3.21678H6.6058V14.5521H8.61458V17.1945H0V14.5521H3.28358V3.21678H0V0.612722Z"
                     fill="white"
@@ -482,8 +482,8 @@
                 <li class="footer-nav__item">
                   <h4 class="footer-nav__title">Меню</h4>
                   <ul class="footer-nav__sub-list">
-                    <li class="footer-nav__sub-item"><a class="footer-nav__link">Главная</a></li>
-                    <li class="footer-nav__sub-item"><a class="footer-nav__link" href="catalog.html">Каталог книг</a></li>
+                    <li class="footer-nav__sub-item"><a class="footer-nav__link" href="index.html">Главная</a></li>
+                    <li class="footer-nav__sub-item"><a class="footer-nav__link">Каталог книг</a></li>
                     <li class="footer-nav__sub-item"><a class="footer-nav__link" href="#">Оплата и доставка</a></li>
                     <li class="footer-nav__sub-item"><a class="footer-nav__link" href="#">Контакты</a></li>
                   </ul>
