--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
       <header class="header">
         <div class="container">
-          <div class="header__wrapper"><a class="header__logo-link" href="#"><span class="visually-hidden">Логотип сайта "По полочкам"</span><svg class="header__logo" width="230" height="35" viewBox="0 0 230 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <div class="header__wrapper"><a class="header__logo-link"><span class="visually-hidden">Логотип сайта "По полочкам"</span><svg class="header__logo" width="230" height="35" viewBox="0 0 230 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                 d="M0 0.612722H21.2467V3.21678H17.9631V14.5521H21.2467V17.1945H12.6321V14.5521H14.6409V3.21678H6.6058V14.5521H8.61458V17.1945H0V14.5521H3.28358V3.21678H0V0.612722Z"
                 fill="#37393E"
@@ -352,7 +352,7 @@
                       <div class="reviews__box-images"><img class="reviews__img" src="static/images/content/review-2.jpg" alt="Фото автора отзыва" width="80"></div>
                       <div class="reviews__box">
                         <h3 class="reviews__name">Елизавета Марьина</h3>
-                        <p class="reviews__count">Купил 76 книг</p>
+                        <p class="reviews__count">Купила 76 книг</p>
                       </div>
                     </div>
                     <p class="reviews__review">Удобная навигация, большой выбор, книги в подарок при определенной сумме заказа. Заказ собирают без ошибок, привозят без задержек</p>
@@ -364,7 +364,7 @@
                       <div class="reviews__box-images"><img class="reviews__img" src="static/images/content/review-3.jpg" alt="Фото автора отзыва" width="80"></div>
                       <div class="reviews__box">
                         <h3 class="reviews__name">Полина Аленичева</h3>
-                        <p class="reviews__count">Купил 17 книг</p>
+                        <p class="reviews__count">Купила 17 книг</p>
                       </div>
                     </div>
                     <p class="reviews__review">Удобный каталог, полезные отзывы на книги, так же есть видеообзоры на книги. Иногда можно приобрести дорогое издание за «символическую» цену.</p>
@@ -406,7 +406,7 @@
       <footer class="footer">
         <div class="container">
           <div class="footer__wrapper">
-            <div class="footer__col"><a class="footer__logo-link" href="#"><span class="visually-hidden">Логотип сайта "По полочкам"</span><svg class="footer__logo" width="230" height="35" viewBox="0 0 230 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <div class="footer__col"><a class="footer__logo-link"><span class="visually-hidden">Логотип сайта "По полочкам"</span><svg class="footer__logo" width="230" height="35" viewBox="0 0 230 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M0 0.612722H21.2467V3.21678H17.9631V14.5521H21.2467V17.1945H12.6321V14.5521H14.6409V3.21678H6.6058V14.5521H8.61458V17.1945H0V14.5521H3.28358V3.21678H0V0.612722Z"
                     fill="white"
