--- a/iron-king.html
+++ b/iron-king.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
       <header class="header">
         <div class="container">
-          <div class="header__wrapper"><a class="header__logo-link" href="#"><span class="visually-hidden">Логотип сайта "По полочкам"</span><svg class="header__logo" width="230" height="35" viewBox="0 0 230 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <div class="header__wrapper"><a class="header__logo-link" href="index.html"><span class="visually-hidden">Логотип сайта "По полочкам"</span><svg class="header__logo" width="230" height="35" viewBox="0 0 230 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                 d="M0 0.612722H21.2467V3.21678H17.9631V14.5521H21.2467V17.1945H12.6321V14.5521H14.6409V3.21678H6.6058V14.5521H8.61458V17.1945H0V14.5521H3.28358V3.21678H0V0.612722Z"
                 fill="#37393E"
@@ -100,14 +100,22 @@
           <div class="container">
             <div class="nav__content">
               <ul class="nav__list">
-                <li class="nav__item"><a class="nav__link">Главная</a></li>
+                <li class="nav__item"><a class="nav__link" href="index.html">Главная</a></li>
                 <li class="nav__item"><a class="nav__link" href="catalog.html">Каталог книг</a></li>
                 <li class="nav__item"><a class="nav__link" href="#">Оплата и доставка</a></li>
                 <li class="nav__item"><a class="nav__link" href="#">Контакты</a></li>
               </ul>
               <ul class="user-nav">
-                <li class="user-nav__item"><a class="user-nav__link user-nav__link--transparent" href="#"><span class="user-nav__text">Регистрация</span></a></li>
-                <li class="user-nav__item"><a class="user-nav__link" href="#"><span class="user-nav__text">Вход</span></a></li>
+                <li class="user-nav__item"><a class="user-nav__link user-nav__link--transparent" href="#">
+                    <svg class="user-nav__icon" width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M14.7956 15.8353C14.4537 14.8785 13.7004 14.033 12.6526 13.4299C11.6047 12.8269 10.3208 12.5 9 12.5C7.6792 12.5 6.3953 12.8269 5.34743 13.4299C4.29957 14.033 3.5463 14.8785 3.20445 15.8353"
+                        stroke-width="1.4"
+                        stroke-linecap="round"
+                      />
+                      <circle cx="9" cy="6.5" r="3" stroke-width="1.4" stroke-linecap="round" />
+                    </svg><span class="user-nav__text">Кирилл</span></a></li>
+                <li class="user-nav__item"><a class="user-nav__link user-nav__link--transparent user-nav__link--red" href="#"><span class="user-nav__text">Выход</span></a></li>
               </ul>
             </div>
           </div>
@@ -183,7 +191,7 @@
                       <div class="reviews__box-images"><img class="reviews__img" src="static/images/content/review-5.jpg" alt="Фото автора отзыва" width="80"></div>
                       <div class="reviews__box">
                         <h3 class="reviews__name">Анна Кириллова</h3>
-                        <p class="reviews__count">Купил 50 книг</p>
+                        <p class="reviews__count">Купила 50 книг</p>
                       </div>
                     </div>
                     <p class="reviews__review">Не ожидала многого от этой книги, купилась больше на красивую обложку, но была рада ошибиться. Обе книги прочитала дня за 3 или 4, уже не помню, так вчиталась!</p>
@@ -195,7 +203,7 @@
                       <div class="reviews__box-images"><img class="reviews__img" src="static/images/content/review-6.jpg" alt="Фото автора отзыва" width="80"></div>
                       <div class="reviews__box">
                         <h3 class="reviews__name">Мария Нагаева </h3>
-                        <p class="reviews__count">Купил 8 книг</p>
+                        <p class="reviews__count">Купила 8 книг</p>
                       </div>
                     </div>
                     <p class="reviews__review">Очень нетипичный подход, учитывая, что фейри и железо слабо совместимы, но логика автора, позволившая формирование нового Двора, меня восхитила.</p>
@@ -288,7 +296,7 @@
       <footer class="footer">
         <div class="container">
           <div class="footer__wrapper">
-            <div class="footer__col"><a class="footer__logo-link" href="#"><span class="visually-hidden">Логотип сайта "По полочкам"</span><svg class="footer__logo" width="230" height="35" viewBox="0 0 230 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <div class="footer__col"><a class="footer__logo-link" href="index.html"><span class="visually-hidden">Логотип сайта "По полочкам"</span><svg class="footer__logo" width="230" height="35" viewBox="0 0 230 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M0 0.612722H21.2467V3.21678H17.9631V14.5521H21.2467V17.1945H12.6321V14.5521H14.6409V3.21678H6.6058V14.5521H8.61458V17.1945H0V14.5521H3.28358V3.21678H0V0.612722Z"
                     fill="white"
@@ -381,7 +389,7 @@
                 <li class="footer-nav__item">
                   <h4 class="footer-nav__title">Меню</h4>
                   <ul class="footer-nav__sub-list">
-                    <li class="footer-nav__sub-item"><a class="footer-nav__link">Главная</a></li>
+                    <li class="footer-nav__sub-item"><a class="footer-nav__link" href="index.html">Главная</a></li>
                     <li class="footer-nav__sub-item"><a class="footer-nav__link" href="catalog.html">Каталог книг</a></li>
                     <li class="footer-nav__sub-item"><a class="footer-nav__link" href="#">Оплата и доставка</a></li>
                     <li class="footer-nav__sub-item"><a class="footer-nav__link" href="#">Контакты</a></li>
