--- a/index.html
+++ b/index.html
@@ -380,22 +380,13 @@
                 <li class="about__item">
                   <div class="about__wrapper">
                     <h3 class="about__heading">По полочкам — крупнейший книжный интернет магазин</h3>
-                    <p class="about__text">
-                      Мы предлагаем большой выбор книг, поддерживая длительные и дружелюбные партнёрские отношения с большинством
-                      издательств. Мы любим книги, ценим любовь к книгам наших покупателей, поэтому стараемся сделать всё возможное, чтобы
-                      каждая книга нашла своего читателя. Наши продавцы разделяют вашу любовь к чтению и всегда рады помочь.
-                    </p>
+                    <p class="about__text">Мы предлагаем большой выбор книг, поддерживая длительные и дружелюбные партнёрские отношения с большинством издательств. Мы любим книги, ценим любовь к книгам наших покупателей, поэтому стараемся сделать всё возможное, чтобы каждая книга нашла своего читателя. Наши продавцы разделяют вашу любовь к чтению и всегда рады помочь.</p>
                   </div>
                 </li>
                 <li class="about__item">
                   <div class="about__wrapper">
                     <h3 class="about__heading">Почему покупать книги онлайн удобно?</h3>
-                    <p class="about__text">
-                      Что делать, если вам нужна особенная книга? Вдруг ее нет в наличии? Чтобы сэкономить время, загляните на наш сайт. Мы
-                      доставляем книги почтой, курьером, в пункты самовывоза или бесплатно в магазины сети. А еще у нас есть мобильное
-                      приложение, в котором удобно делать заказы. Вы можете добавить в него Карту Любимого Покупателя, чтобы копить бонусы и
-                      тратить их на покупки.
-                    </p>
+                    <p class="about__text">Что делать, если вам нужна особенная книга? Вдруг ее нет в наличии? Чтобы сэкономить время, загляните на наш сайт. Мы доставляем книги почтой, курьером, в пункты самовывоза или бесплатно в магазины сети. А еще у нас есть мобильное приложение, в котором удобно делать заказы. Вы можете добавить в него Карту Любимого Покупателя, чтобы копить бонусы и тратить их на покупки.</p>
                   </div>
                 </li>
               </ul>
@@ -526,19 +517,16 @@
                 <li class="footer-nav__item">
                   <h4 class="footer-nav__title footer-nav__title--more">Адрес</h4>
                   <ul class="footer-nav__sub-list">
-                    <li class="footer-nav__sub-item">
-                      <p class="footer-nav__text">г. Санкт-Петербург, <br>
-                        наб. Pеки Карповки, 5 корпус П
-                      </p>
+                    <li class="footer-nav__sub-item"><p class="footer-nav__text">г. Санкт-Петербург, <br> наб. Pеки Карповки, 5 корпус П</p></li>
+                    <li class="footer-nav__sub-item"><a class="footer-nav__link" href="tel:+78005558628">+7 800 555 86 28</a>
                     </li>
-                    <li class="footer-nav__sub-item"><a class="footer-nav__link" href="tel:+78005558628">+7 800 555 86 28</a></li>
                   </ul>
                 </li>
               </ul>
             </nav>
           </div>
         </div>
-        <p class="footer__copyright">© ООО «Интерактивные обучающие технологии», 2013−2021                       </p>
+        <p class="footer__copyright">© ООО «Интерактивные обучающие технологии», 2013−2021</p>
       </footer>
     </div>
   </body>
