--- a/iron-king.html
+++ b/iron-king.html
@@ -126,8 +126,9 @@
           <section class="breadcrumbs">
             <div class="container">
               <ul class="breadcrumbs__list">
-                <li class="breadcrums__item"><a class="breadcrumbs__link" href="index.html">Главная страница</a></li>
-                <li class="breadcrums__item"><span class="breadcrumbs__text">Каталог книг</span></li>
+                <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="index.html">Главная страница</a></li>
+                <li class="breadcrumbs__item"><a class="breadcrumbs__link breadcrumbs__link--slash" href="catalog.html">Каталог книг</a></li>
+                <li class="breadcrumbs__item"><span class="breadcrumbs__text">Железный король</span></li>
               </ul>
             </div>
           </section>
@@ -416,11 +417,7 @@
                 <li class="footer-nav__item">
                   <h4 class="footer-nav__title footer-nav__title--more">Адрес</h4>
                   <ul class="footer-nav__sub-list">
-                    <li class="footer-nav__sub-item">
-                      <p class="footer-nav__text">г. Санкт-Петербург, <br>
-                        наб. Pеки Карповки, 5 корпус П
-                      </p>
-                    </li>
+                    <li class="footer-nav__sub-item"><p class="footer-nav__text">г. Санкт-Петербург, <br> наб. Pеки Карповки, 5 корпус П</p></li>
                     <li class="footer-nav__sub-item"><a class="footer-nav__link" href="tel:+78005558628">+7 800 555 86 28</a></li>
                   </ul>
                 </li>
@@ -428,7 +425,7 @@
             </nav>
           </div>
         </div>
-        <p class="footer__copyright">© ООО «Интерактивные обучающие технологии», 2013−2021                       </p>
+        <p class="footer__copyright">© ООО «Интерактивные обучающие технологии», 2013−2021</p>
       </footer>
     </div>
   </body>
