--- a/modules/catalog/catalog-filter.html
+++ b/modules/catalog/catalog-filter.html
@@ -4,81 +4,81 @@
     <fieldset class="catalog-filter__fieldset">
       <p class="catalog-filter__legend">Категория</p>
       <div class="catalog-filter__box">
-        <input class="catalog-filter__checkbox" id="fiction" type="checkbox" name="fiction"/>
+        <input class="catalog-filter__checkbox" type="checkbox" id="fiction" name="fiction"/>
         <label class="catalog-filter__label" for="fiction">Художественная литература</label>
       </div>
       <div class="catalog-filter__box">
-        <input class="catalog-filter__checkbox" id="for-children" type="checkbox" name="for-children"/>
+        <input class="catalog-filter__checkbox" type="checkbox" id="for-children" name="for-children"/>
         <label class="catalog-filter__label" for="for-children">Книги для детей</label>
       </div>
       <div class="catalog-filter__box">
-        <input class="catalog-filter__checkbox" id="education" type="checkbox" name="education" checked="checked"/>
+        <input class="catalog-filter__checkbox" type="checkbox" id="education" name="education" checked="checked"/>
         <label class="catalog-filter__label" for="education">Образование</label>
       </div>
       <div class="catalog-filter__box">
-        <input class="catalog-filter__checkbox" id="science-and-technology" type="checkbox" name="science-and-technology"/>
+        <input class="catalog-filter__checkbox" type="checkbox" id="science-and-technology" name="science-and-technology"/>
         <label class="catalog-filter__label" for="science-and-technology">Наука и техника</label>
       </div>
       <div class="catalog-filter__box">
-        <input class="catalog-filter__checkbox" id="society" type="checkbox" name="society"/>
+        <input class="catalog-filter__checkbox" type="checkbox" id="society" name="society"/>
         <label class="catalog-filter__label" for="society">Общество</label>
       </div>
       <div class="catalog-filter__box">
-        <input class="catalog-filter__checkbox" id="business-literature" type="checkbox" name="business-literature"/>
+        <input class="catalog-filter__checkbox" type="checkbox" id="business-literature" name="business-literature"/>
         <label class="catalog-filter__label" for="business-literature">Деловая литература</label>
       </div>
       <div class="catalog-filter__box">
-        <input class="catalog-filter__checkbox" id="health" type="checkbox" name="health"/>
+        <input class="catalog-filter__checkbox" type="checkbox" id="health" name="health"/>
         <label class="catalog-filter__label" for="health">Здоровье</label>
       </div>
       <div class="catalog-filter__box">
-        <input class="catalog-filter__checkbox" id="hobby" type="checkbox" name="hobby" checked="checked"/>
+        <input class="catalog-filter__checkbox" type="checkbox" id="hobby" name="hobby" checked="checked"/>
         <label class="catalog-filter__label" for="hobby">Увлечения</label>
       </div>
       <div class="catalog-filter__box">
-        <input class="catalog-filter__checkbox" id="psychology" type="checkbox" name="psychology"/>
+        <input class="catalog-filter__checkbox" type="checkbox" id="psychology" name="psychology"/>
         <label class="catalog-filter__label" for="psychology">Психология</label>
       </div>
       <div class="catalog-filter__box">
-        <input class="catalog-filter__checkbox" id="esoterics" type="checkbox" name="esoterics"/>
+        <input class="catalog-filter__checkbox" type="checkbox" id="esoterics" name="esoterics"/>
         <label class="catalog-filter__label" for="esoterics">Эзотерика</label>
       </div>
       <div class="catalog-filter__box">
-        <input class="catalog-filter__checkbox" id="philosophy" type="checkbox" name="philosophy"/>
+        <input class="catalog-filter__checkbox" type="checkbox" id="philosophy" name="philosophy"/>
         <label class="catalog-filter__label" for="philosophy">Философия и религия</label>
       </div>
       <div class="catalog-filter__box">
-        <input class="catalog-filter__checkbox" id="art" type="checkbox" name="art"/>
+        <input class="catalog-filter__checkbox" type="checkbox" id="art" name="art"/>
         <label class="catalog-filter__label" for="art">Искусство</label>
       </div>
     </fieldset>
     <fieldset class="catalog-filter__fieldset">
       <p class="catalog-filter__legend">Статус</p>
       <div class="catalog-filter__box catalog-filter__box--radio">
-        <input class="catalog-filter__radio" id="bestsellers" type="radio" name="bestsellers" value="bestsellers"/>
+        <input class="catalog-filter__radio" type="radio" id="bestsellers" name="bestsellers" value="bestsellers"/>
         <label class="catalog-filter__label" for="bestsellers">Хиты продаж</label>
       </div>
       <div class="catalog-filter__box catalog-filter__box--radio">
-        <input class="catalog-filter__radio" id="new-books" type="radio" name="new-books" value="new-books" checked="checked"/>
+        <input class="catalog-filter__radio" type="radio" id="new-books" name="new-books" value="new-books" checked="checked"/>
         <label class="catalog-filter__label" for="new-books">Новинки</label>
       </div>
       <div class="catalog-filter__box catalog-filter__box--radio">
-        <input class="catalog-filter__radio" id="preorder" type="radio" name="preorder" value="preorder"/>
+        <input class="catalog-filter__radio" type="radio" id="preorder" name="preorder" value="preorder"/>
         <label class="catalog-filter__label" for="preorder">Предзаказ</label>
       </div>
     </fieldset>
     <fieldset class="catalog-filter__fieldset">
       <p class="catalog-filter__legend">Наличие</p>
       <div class="catalog-filter__box catalog-filter__box--radio">
-        <input class="catalog-filter__radio" id="in-the-shop" type="radio" name="in-the-shop" value="in-the-shop"/>
+        <input class="catalog-filter__radio" type="radio" id="in-the-shop" name="in-the-shop" value="in-the-shop"/>
         <label class="catalog-filter__label" for="in-the-shop">В магазине</label>
       </div>
       <div class="catalog-filter__box catalog-filter__box--radio">
-        <input class="catalog-filter__radio" id="in-the-internet-shop" type="radio" name="in-the-internet-shop" value="in-the-internet-shop" checked="checked"/>
+        <input class="catalog-filter__radio" type="radio" id="in-the-internet-shop" name="in-the-internet-shop" value="in-the-internet-shop" checked="checked"/>
         <label class="catalog-filter__label" for="in-the-internet-shop">В интернет-магазине</label>
       </div>
       <div class="catalog-filter__box catalog-filter__box--radio">
-        <input class="catalog-filter__radio" id="under-the-order" type="radio" name="under-the-order" value="under-the-order"/>
+        <input class="catalog-filter__radio" type="radio" id="under-the-order" name="under-the-order" value="under-the-order"/>
         <label class="catalog-filter__label" for="under-the-order">Под заказ</label>
       </div>
     </fieldset>
